Dodano teorie, dyskusję błędów zadania 1,3  oraz wnioski, a także literature

--- a/Cw2/Cw2KubajewskiOrłowskiMatusiewicz.tex
+++ b/Cw2/Cw2KubajewskiOrłowskiMatusiewicz.tex
@@ -285,6 +285,8 @@ Różnice te mogą wynikać z następujących przyczyn:
 	\item Tolerancja elementów wewnętrznych.
 \end{itemize}
 
+W zadaniu trzecim wyniki rzeczywiste nie różnią się od wartości teoretycznych. Pomiary wykazane na rzeczywistych układach odpowiadają tym w tablicach wzbudzeń dla konkretnych przerzutników.
+
 \section{Wnioski}
 W naszych zadaniach można było zaobserwować zachowanie bramek TTL, przerzutników D, T, RS oraz JK. W zadaniu pierwszym zbadano powierzchnie charakterystyczną bramki 7400 poprzez zmianę napięć na wejścia oraz pomiar napięcia na wyjściu. Otrzymane wyniki potwierdziły, że stany napięć logicznych nie są idealnie równe 0V( logiczne "0") oraz 5V( logiczne "1"), co jest zgodne z teorią działania brmake TTL. Dodatkowo zaobserwowano również margines odporności na zakłócenia, które zapewniają interpretację stanów logicznych pomimo niewielkich odchyleń napięć. Dzięki temu można było zaobserować rzeczywistą, nieliniową charakterystykę przejścia pomiędzy stanami logicznymi.\\
 
