--- a/Cw2/Cw2KubajewskiOrłowskiMatusiewicz.tex
+++ b/Cw2/Cw2KubajewskiOrłowskiMatusiewicz.tex
@@ -161,7 +161,7 @@ Zapoznanie z podstawowymi parametrami wybranych układów cyfrowych TTL, konkret
 			1 & 1 & 0 \\ 
 			\hline
 		\end{tabular}
-		\caption{Tabela wzbudzeń przerzutnika typu T (Gdy na \textbf{T} jest 1 działa w trybie \textbf{TOGGLE}}
+		\caption{Tabela wzbudzeń przerzutnika typu T (Gdy na \textbf{T} jest 1 działa w trybie \textbf{TOGGLE})}
 	\end{table}
 \end{minipage}
 \hfill 
@@ -250,29 +250,29 @@ Do przetestowania i dokonania pomiarów użyto \textbf{modułu DB26} do którego
 \end{figure}
 
 \subsection{Zadanie 3}
-W zadaniu 3 przetestowano działanie przerzutników \textbf{T, RS, JK, D} za pomocą \textbf{modułu DB11}. Poniżej zamieszczone są schematy poszczególnych przerzutników.
+W zadaniu 3 przetestowano działanie przerzutników \textbf{T, RS, JK, D} za pomocą \textbf{modułu DB11} wprowadzając kombinacje z tabeli prawdy. Poniżej zamieszczone są schematy poszczególnych przerzutników.
 
 \begin{figure}[h]
     \centering
-    \begin{subfigure}[t]{0.3\textwidth}
+    \begin{subfigure}[t]{0.4\textwidth}
         \centering
         \includegraphics[width=\textwidth]{D.png}
         \caption{Schemat przerzutnika D}
     \end{subfigure}
     \hfill
-    \begin{subfigure}[t]{0.3\textwidth}
+    \begin{subfigure}[t]{0.4\textwidth}
         \centering
         \includegraphics[width=\textwidth]{T.png}
         \caption{Schemat przerzutnika T}
     \end{subfigure}
     \hfill
-    \begin{subfigure}[t]{0.3\textwidth}
+    \begin{subfigure}[t]{0.4\textwidth}
         \centering
         \includegraphics[width=\textwidth]{RS.png}
         \caption{Schemat przerzutnika RS}
     \end{subfigure}
         \hfill
-    \begin{subfigure}[t]{0.3\textwidth}
+    \begin{subfigure}[t]{0.4\textwidth}
         \centering
         \includegraphics[width=\textwidth]{JK.png}
         \caption{Schemat przerzutnika JK}
@@ -340,7 +340,7 @@ W zadaniu trzecim zaobserwowano rzeczywiste działanie przerzutników. Pozwolił
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.8\textwidth, angle=-90]{protokol.JPG}
+    \includegraphics[width=1\textwidth, angle=-90]{protokol.JPG}
     \caption{Protokół}
     \label{fig:moj_obrazek}
 \end{figure}
