--- a/Cw2/Cw2KubajewskiOrłowskiMatusiewicz.tex
+++ b/Cw2/Cw2KubajewskiOrłowskiMatusiewicz.tex
@@ -328,10 +328,15 @@ W zadaniu trzecim zaobserwowano rzeczywiste działanie przerzutników. Pozwolił
 	\url{https://en.wikipedia.org/wiki/Transistor-transistor_logic}, 
 	data dostępu: październik 2025.
 	
+	\bibitem{wiki-flip} 
+	\textit{Excitation table}, Wikipedia, dostęp online: 
+	\url{https://en.wikipedia.org/wiki/Excitation_table}, 
+	data dostępu: lipiec 2025.
+	
 	\bibitem{TI7400} 
 	Texas Instruments, \textit{SN7400 NAND Gate Datasheet}, dostęp online: 
 	\url{https://www.ti.com/lit/ds/symlink/sn7400.pdf}, 
-	data dostępu: 2017.
+	data dostępu: październik 2025.
 	
 \end{thebibliography}
 
